<resources>
    <string name="app_name">Hounorte</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="me_cadastrar">Quero me cadastrar</string>
    <string name="sou_cadastrado">Já sou cadastrado</string>
    <string name="logo_hounorte">Logo Hounorte</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu">Esqueceu</string>
    <string name="email_senha">Email | Senha?</string>
    <string name="nao_possui_conta">Ainda não possui conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="idade">Idade</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="possui_conta">Já possui conta?</string>
    <string name="login">Login</string>
    <string name="title_home">Olá, Amon</string>
    <string name="descricao_home">Pratique seus conhecimentos com as questões mais cobradas nos vestibulares do Norte e seja aprovado na sua Universidade</string>
    <string name="title_home_lista">Listas de Exercícios</string>
    <string name="btn_ver_tudo">Ver Tudo</string>
    <string name="redacao">Redação</string>
    <string name="matematica">Matemática</string>
    <string name="geografia">Geografia</string>
    <string name="historia">História</string>
    <string name="ingles">Inglês</string>
    <string name="portugues">Português</string>
    <string name="title_home_vest">Vestibulares</string>
    <string name="btn_ver_mais">Ver Mais</string>
    <string name="ufam">UFAM</string>
    <string name="ifam">IFAM</string>
    <string name="uea">UEA</string>
    <string name="enem">ENEM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nome_perfil">Henrique Freitas Barkett</string>
    <string name="nome_pagina_perfil">Henrique Freitas Barkett</string>
    <string name="aba_infos_perfil">Meus Dados</string>
    <string name="abas_listas_perfil">Minhas Listas</string>
    <string name="tv_titulo_nome_perfil">Nome</string>
    <string name="tv_titulo_email_perfil">Email</string>
    <string name="email_perfil">2020000511@ifam.edu.br</string>
    <string name="tv_titulo_senha_perfil">Senha</string>
    <string name="senha_perfil">SENHA MAIS DIFICIL DE TODAS</string>
    <string name="tv_logout_perfil">Sair da minha conta</string>
    <string name="cv_biologia">Biologia</string>
    <string name="cv_quimica">Química</string>
    <string name="lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla faucibus lorem est, at dignissim quam bibendum ut. Aenean at lorem in augue fermentum auctor non eu purus. Nulla sit amet mi facilisis, commodo quam nec, hendrerit tortor. Ut lacinia dolor in metus accumsan sodales. Pellentesque ut justo fringilla, sollicitudin sem vitae, tincidunt massa. Fusce vulputate tortor et cursus mollis.</string>
    <string name="encontre_sua_conta">Encontre sua conta</string>
    <string name="insira_seu_email">Insira seu Email</string>
    <string name="tv_exercicio">Exercício</string>
    <string name="tv_barEx">/</string>
    <string name="tv_fonte">Fonte:</string>
    <string name="tv_textNextQ">TEXTO PARA A QUESTÃO A SEGUIR :</string>
    <string name="tab_meus_dados">Meus Dados</string>
    <string name="tab_minhas_listas">Minhas Listas</string>
    <string name="tv_senha_oculta">*************************</string>
    <string name="tv_titulo_senha">Senha</string>
    <string name="tv_titulo_email">Email</string>
    <string name="tv_titulo_nome">Nome</string>
    <string name="teste">Teste</string>
    <string name="refazer_teste">Refazer Teste</string>
    <string name="pagina_inicial">Pagina Inicial</string>
    <string name="barra">/</string>
    <string name="qnt_a">10</string>
    <string name="qnt_e">20</string>
    <string name="parabens">PARABÉNS VOCÊ TERMINOU O QUIZ</string>
    <string name="resultados">RESULTADOS:</string>

</resources>