<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFCE5"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="148dp"
        android:layout_height="132dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/logo_hounorte"
        android:src="@drawable/hounorte_green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bem_vindo"
        android:textColor="#333333"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:lineSpacingExtra="4dp"
        android:text="@string/lorem_ipsum"
        android:textAlignment="center"
        android:textColor="#333333"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_me_cadastrar"
        android:layout_width="217.66dp"
        android:layout_height="40dp"
        android:layout_marginTop="184dp"
        android:background="@drawable/bg_btn_cadastrar"
        android:elevation="10dp"
        android:padding="10dp"
        android:text="@string/me_cadastrar"
        android:textAllCaps="false"
        android:textColor="#333333"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sou_cadastrado"
        android:layout_width="217.66dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_btn_cadastrado"
        android:text="@string/sou_cadastrado"
        android:textAllCaps="false"
        android:textColor="#333333"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_me_cadastrar" />


</androidx.constraintlayout.widget.ConstraintLayout>