<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFCE5"
        tools:context=".FormCadastro">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/logo_hounorte"
            android:src="@drawable/hounorte_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/bem_vindo"
            android:textColor="#333333"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <View
            android:id="@+id/container_components"
            style="@style/ContainerComponents"
            android:layout_width="354dp"
            android:layout_height="302dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.307"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/edit_idade"
            style="@style/Edit_Text"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_date"
            android:hint="@string/idade"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="@+id/container_components"
            app:layout_constraintStart_toStartOf="@+id/container_components"
            app:layout_constraintTop_toBottomOf="@+id/edit_nome" />

        <EditText
            android:id="@+id/edit_nome"
            style="@style/Edit_Text"
            android:autofillHints="name"
            android:drawableEnd="@drawable/ic_person"
            android:hint="@string/nome_completo"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="@+id/container_components"
            app:layout_constraintStart_toStartOf="@+id/container_components"
            app:layout_constraintTop_toTopOf="@+id/container_components" />

        <EditText
            android:id="@+id/edit_email"
            style="@style/Edit_Text"
            android:autofillHints="emailAddress"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/container_components"
            app:layout_constraintStart_toStartOf="@+id/container_components"
            app:layout_constraintTop_toBottomOf="@+id/edit_idade" />

        <EditText
            android:id="@+id/edit_senha"
            style="@style/Edit_Text"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:drawableEnd="@drawable/ic_eye"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/container_components"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="@+id/container_components"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />


        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/container_components" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_entrar"
            style="@style/Button_Type"
            android:layout_marginTop="36dp"
            android:background="@drawable/bg_btn_cadastrar"
            android:elevation="10dp"
            android:padding="10dp"
            android:text="@string/criar_conta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <LinearLayout
            android:id="@+id/possui_conta"

            android:layout_width="383dp"
            android:layout_height="29dp"
            android:layout_marginTop="24dp"

            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_entrar"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/txt_possui_conta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/possui_conta"
                android:textColor="@color/black_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/login"
                android:textColor="@color/green_theme"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_arrow_back_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            app:backgroundTint="#00FFFFFF"
            app:borderWidth="2dp"
            app:elevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:pressedTranslationZ="3dp"
            app:rippleColor="#00FFFFFF"
            app:srcCompat="@drawable/ic_arrow_back"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
