<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resultados"
    android:background="#FFFCE5">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:contentDescription="@img_acerto"
            android:id="@+id/img_v_acerto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="140dp"
            android:src="@drawable/v_acerto">
        </ImageView>

        <TextView
            android:id="@+id/parabens"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_v_acerto"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:text="@string/parabens"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/seus_acertos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/parabens"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/resultados"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/correct"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seus_acertos"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="165dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="206dp"
            android:gravity="center"
            android:text="@string/qnt_a"
            android:textColor="#008000"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/barra"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/seus_acertos"
            android:layout_alignStart="@+id/correct"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="185dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="186dp"
            android:gravity="center"
            android:text="@string/barra"
            android:textColor="@color/black"
            android:textSize="20sp">
        </TextView>

        <TextView
            android:id="@+id/wrong"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/seus_acertos"
            android:layout_alignStart="@id/barra"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="205dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="166dp"
            android:gravity="center"
            android:text="@string/qnt_e"
            android:textColor="@color/red"
            android:textSize="20sp">
        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_pagina_principal"
            style="@style/Button_Type"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_below="@+id/barra"
            android:layout_marginStart="55dp"
            android:layout_marginTop="60dp"
            android:background="@color/green_theme"
            android:drawableStart="@drawable/ic_home"
            android:padding="10dp"
            android:text="@string/pagina_inicial"
            android:textColor="@color/black">
        </androidx.appcompat.widget.AppCompatButton>
    </RelativeLayout>






</androidx.constraintlayout.widget.ConstraintLayout>